likec4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: likec4
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: likec4
